--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,31 @@
     --bs-btn-active-bg: #0c5734;
 }
 
+main{
+    margin-top: 5rem;
+}
+
 .navbar-brand img{
     width: 50px;
 }
+
+/* Tamanho carrosel */
+
+.carousel-item{
+    height: 500px;
+}
+
+.carousel-item img{
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.carousel-item::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(transparent, rgb(31, 31, 31));
+    position: absolute;
+}
+
