--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+:root{
+    --bs-link-color:#198754;
+    --bs-link-hover-color: #146c43;
+}
+
 .btn{
     --bs-btn-bg: #198754;
     --bs-btn-border-color: #146c43;
@@ -8,6 +13,10 @@
 
 main{
     margin-top: 5rem;
+}
+
+section{
+    scroll-margin-top: 6rem;
 }
 
 .navbar-brand img{
@@ -34,3 +43,7 @@ main{
     position: absolute;
 }
 
+.card-menu img{
+    height: 300px;
+    object-fit: cover;
+}
